After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723185 - from incognito window, you can't create a normal window
from incognito window, you can't create a normal window
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
: 732008 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-01-28 19:36 UTC by Baptiste Mille-Mathias
Modified: 2017-02-07 10:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
"New Window" should never open incognito window (2.64 KB, patch)
2016-10-28 11:54 UTC, Michael Catanzaro
committed Details | Review

Description Baptiste Mille-Mathias 2014-01-28 19:36:36 UTC
When you're in Incognito Mode, if you do a Web>New Window, actually it creates a new incognito window.

Not sure if this is the intended result as there is also the "New incognito Window" item available in the menu.
Comment 1 Kat 2014-02-25 12:13:03 UTC
Still get it in Rawhide today.

This seems to be a pretty bad problem as it would cause user data loss to be fixed. That is to say, one needs to quit all windows and start again to fix it, and because incognito mode is incognito, the user has no way of restoring their incognito tabs/browsing history.
Comment 2 Michael Catanzaro 2016-10-28 11:28:49 UTC
*** Bug 732008 has been marked as a duplicate of this bug. ***
Comment 3 Michael Catanzaro 2016-10-28 11:50:15 UTC
Heads-up: this patch is going to break in Debian and Ubuntu due to the epiphany-browser rename; your downstream patch will need to be updated. This is going into 3.22.2 as well as master.
Comment 4 Michael Catanzaro 2016-10-28 11:54:07 UTC
The following fix has been pushed:
1bf51d1 "New Window" should never open incognito window
Comment 5 Michael Catanzaro 2016-10-28 11:54:11 UTC
Created attachment 338718 [details] [review]
"New Window" should never open incognito window

There is already a different menu item to get an incognito window.
Comment 6 Michael Catanzaro 2016-10-28 11:55:02 UTC
(In reply to Michael Catanzaro from comment #3)
> This is going into 3.22.2 as well as master.

Actually, since it's a significant behavior change, I decided not to backport it to 3.22.
Comment 7 Jeremy Bicha 2017-02-07 10:43:07 UTC
(In reply to Michael Catanzaro from comment #3)
> Heads-up: this patch is going to break in Debian and Ubuntu due to the
> epiphany-browser rename; your downstream patch will need to be updated. This
> is going into 3.22.2 as well as master.

Actually, Debian and Ubuntu's package includes both /usr/bin/epiphany and /usr/bin/epiphany-browser which end up doing the same thing so this did not break Debian or Ubuntu at all.

Specifically, /usr/bin/epiphany-browser has these contents:
https://sources.debian.net/src/epiphany-browser/unstable/debian/epiphany-browser.sh/

This is possible because epiphany the game is installed as /usr/games/epiphany according to the FHS.