"New Window" should never open incognito window

There is already a different menu item to get an incognito window.

https://bugzilla.gnome.org/show_bug.cgi?id=723185